--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-  test_setup:
-    name: Test setup
+  wait_for_preview_url:
+    name: Wait for Vercel Preview URL
     runs-on: ubuntu-latest
     outputs:
       preview_url: ${{ steps.get-vercel-preview-url.outputs.preview_url }}
@@ -24,7 +24,7 @@ jobs:
         run: echo "Preview url is ready ${{ steps.get-vercel-preview-url.outputs.preview_url }}"
 
   playwright-tests:
-    needs: test_setup
+    needs: wait_for_preview_url
     timeout-minutes: 180
     runs-on: ubuntu-latest
     strategy:
@@ -47,7 +47,7 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test tests/studio --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
         env:
-          PLAYWRIGHT_TEST_BASE_URL: ${{ needs.test_setup.outputs.preview_url }} # dynamically generated and unique per build
+          PLAYWRIGHT_TEST_BASE_URL: ${{ needs.wait_for_preview_url.outputs.preview_url }} # dynamically generated and unique per build
           NEXT_PUBLIC_PREVIEW_SECRET: ${{ secrets.NEXT_PUBLIC_PREVIEW_SECRET }} # used for launching site preview in sites - same as per site's NEXT_PUBLIC_PREVIEW_SECRET in environment variables in Netlify/Vercel
           STUDIO_AUTOLOGIN_TOKEN_FOR_TESTING: ${{ secrets.STUDIO_AUTOLOGIN_TOKEN_FOR_TESTING }} # A unique API token generated on creation of project and added here one-time.
           NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_SANITY_PROJECT_ID }} # Same as per site's Sanity project ID
@@ -60,25 +60,6 @@ jobs:
           name: blob-report-${{ matrix.shardIndex }}
           path: blob-report
           retention-days: 1
-
-      # - name: Upload Playwright Test Report
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: playwright-report
-      #     path: playwright-report/
-
-      # - name: Deploy to Netlify
-      #   run: npx netlify-cli deploy --dir=playwright-report --prod --yes
-      #   env:
-      #     NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-      #     NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-
-      # - name: Upload Playwright Trace
-      #   uses: actions/upload-artifact@v4
-      #   if: failure()
-      #   with:
-      #     name: playwright-test-results
-      #     path: test-results/
 
   merge-reports:
     # Merge reports after playwright-tests, even if some shards have failed
