chore: copy updates

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
           vercel_team_id: ${{ secrets.VERCEL_TEAM_ID }}
           gh_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Echo preview
+      - name: Echo Vercel Preview URL
         run: echo "Preview url is ready ${{ steps.get-vercel-preview-url.outputs.preview_url }}"
 
   playwright-tests:
