--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webriq-pagebuilder/site-template-default",
-  "version": "4.2.0",
+  "version": "5.1.0",
   "private": true,
   "license": "MIT",
   "author": {
@@ -31,18 +31,18 @@
     "@sanity/vision": "^3.17.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^4.2.1-alpha.4",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^4.2.1-alpha.4",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^5.1.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^5.1.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "clsx": "^2.0.0",
