--- a/package.json
+++ b/package.json
@@ -55,14 +55,13 @@
     "lodash": "^4.17.21",
     "magicast": "^0.3.3",
     "marked": "^4.3.0",
-    "ms": "^2.1.3",
     "msw-storybook-addon": "1.10.0",
     "nanoid": "^3.1.30",
-    "next": "^14.2.3",
+    "next": "^14.1.3",
     "next-sanity": "4.3.3",
     "polished": "^4.2.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
     "sanity": "^3.17.0",
@@ -78,8 +77,8 @@
     "ts-dedent": "^2.2.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.3.2",
-    "@playwright/test": "^1.44.1",
+    "@netlify/plugin-nextjs": "^5.5.0",
+    "@playwright/test": "1.44.1",
     "@storybook/addon-designs": "^8.0.0",
     "@storybook/addon-docs": "^8.0.0",
     "@storybook/addon-essentials": "^8.0.0",
@@ -100,7 +99,7 @@
     "autoprefixer": "^10.4.15",
     "chromatic": "^11.0.8",
     "eslint": "^8.39.0",
-    "eslint-config-next": "^14.2.3",
+    "eslint-config-next": "^14.1.3",
     "eslint-plugin-storybook": "^0.8.0",
     "msw": "1.3.2",
     "postcss": "^8.4.29",
