--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag @webriq-pagebuilder/sanity-plugin-input-component-social-accounts@$ctag",
+    "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-site-settings@$ctag yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag @webriq-pagebuilder/sanity-plugin-input-component-social-accounts@$ctag",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build-storybook-docs": "storybook build --docs",
@@ -31,18 +31,20 @@
     "@sanity/vision": "^3.17.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^5.2.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^5.2.0",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-site-settings": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^5.3.1-alpha.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^5.3.1-alpha.1",
+    "add": "^2.0.6",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "clsx": "^2.0.0",
@@ -74,7 +76,8 @@
     "styled-components": "^5.2",
     "swiper": "^10.2.0",
     "tailwind-merge": "^2.0.0",
-    "ts-dedent": "^2.2.0"
+    "ts-dedent": "^2.2.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.5.0",
