--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "next-sanity": "4.3.3",
     "polished": "^4.2.2",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
@@ -97,17 +98,17 @@
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "@types/vhtml": "^2.2.4",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.20",
     "chromatic": "^11.0.8",
     "eslint": "^8.39.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-storybook": "^0.8.0",
     "msw": "1.3.2",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.47",
     "prettier": "^3.0.3",
     "sitemap": "^7.1.1",
     "storybook": "^8.0.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.12",
     "typescript": "5.0.4"
   }
 }
