changes for components library

--- a/package.json
+++ b/package.json
@@ -29,6 +29,26 @@
     "@sanity/types": "^3.17.0",
     "@sanity/ui": "^1.8.2",
     "@sanity/vision": "^3.17.0",
+    "@stackshift/components-app-promo": "0.0.15",
+    "@stackshift/components-blog": "0.0.10",
+    "@stackshift/components-common": "0.0.21",
+    "@stackshift/components-call-to-action": "0.0.7",
+    "@stackshift/components-contact": "0.0.15",
+    "@stackshift/components-cookies": "0.0.4",
+    "@stackshift/components-faqs": "0.0.12",
+    "@stackshift/components-features": "0.0.12",
+    "@stackshift/components-footer": "0.0.12",
+    "@stackshift/components-header": "0.0.20",
+    "@stackshift/components-how-it-works": "0.0.12",
+    "@stackshift/components-logocloud": "0.0.14",
+    "@stackshift/components-navigation": "0.0.18",
+    "@stackshift/components-newsletter": "0.0.17",
+    "@stackshift/components-portfolio": "0.0.7",
+    "@stackshift/components-signin-signup": "0.0.19",
+    "@stackshift/components-statistics": "0.0.14",
+    "@stackshift/components-team": "0.0.13",
+    "@stackshift/components-testimonial": "0.0.17",
+    "@stackshift/components-text-component": "0.0.2",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^5.3.0",
