--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   "dependencies": {
     "@portabletext/react": "^3.0.9",
     "@sanity/code-input": "^4.1.1",
-    "@sanity/icons": "^2.4.1",
+    "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/types": "^3.17.0",
-    "@sanity/ui": "^1.8.2",
+    "@sanity/ui": "^2.8.9",
     "@sanity/vision": "^3.17.0",
     "@stripe/react-stripe-js": "^2.1.0",
-    "@stripe/stripe-js": "^1.52.1",
+    "@stripe/stripe-js": "^4.8.0",
     "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^5.3.0",
     "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^5.3.0",
     "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^5.3.0",
@@ -48,15 +48,15 @@
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "date-fns": "^2.24.0",
+    "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "magicast": "^0.3.3",
-    "marked": "^4.3.0",
-    "msw-storybook-addon": "1.10.0",
-    "nanoid": "^3.1.30",
+    "marked": "^14.1.2",
+    "msw-storybook-addon": "2.0.3",
+    "nanoid": "^5.0.7",
     "next": "^14.1.3",
     "next-sanity": "4.3.3",
     "polished": "^4.2.2",
@@ -66,21 +66,21 @@
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
     "sanity": "^3.17.0",
-    "sanity-plugin-iframe-pane": "^2.5.7",
+    "sanity-plugin-iframe-pane": "2.6.1",
     "sanity-plugin-media": "^2.2.2",
     "sass": "^1.62.1",
-    "sharp": "^0.32.0",
+    "sharp": "^0.33.5",
     "split-pane-react": "^0.1.3",
-    "stripe": "^12.7.0",
-    "styled-components": "^5.2",
-    "swiper": "^10.2.0",
+    "stripe": "^17.2.0",
+    "styled-components": "^6.1.13",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.0.0",
     "ts-dedent": "^2.2.0",
     "vanilla-cookieconsent": "^3.0.1"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.5.0",
-    "@playwright/test": "1.44.1",
+    "@playwright/test": "1.48.0",
     "@storybook/addon-designs": "^8.0.0",
     "@storybook/addon-docs": "^8.0.0",
     "@storybook/addon-essentials": "^8.0.0",
@@ -92,7 +92,7 @@
     "@storybook/manager-api": "^8.0.0",
     "@storybook/nextjs": "^8.0.0",
     "@storybook/react": "^8.0.0",
-    "@storybook/test": "8.0.0",
+    "@storybook/test": "8.3.5",
     "@storybook/testing-library": "^0.2.2",
     "@storybook/theming": "^8.0.0",
     "@types/react": "^18.2.65",
@@ -100,15 +100,15 @@
     "@types/vhtml": "^2.2.4",
     "autoprefixer": "^10.4.20",
     "chromatic": "^11.0.8",
-    "eslint": "^8.39.0",
+    "eslint": "^9.12.0",
     "eslint-config-next": "^14.1.3",
-    "eslint-plugin-storybook": "^0.8.0",
-    "msw": "1.3.2",
+    "eslint-plugin-storybook": "^0.9.0",
+    "msw": "2.4.9",
     "postcss": "^8.4.47",
     "prettier": "^3.0.3",
-    "sitemap": "^7.1.1",
+    "sitemap": "^8.0.0",
     "storybook": "^8.0.0",
     "tailwindcss": "^3.4.12",
-    "typescript": "5.0.4"
+    "typescript": "5.6.3"
   }
 }
