--- a/package.json
+++ b/package.json
@@ -29,39 +29,39 @@
     "@sanity/types": "^3.17.0",
     "@sanity/ui": "^2.8.9",
     "@sanity/vision": "^3.17.0",
-    "@stackshift-ui/app-promo": "1.0.0",
-    "@stackshift-ui/blockstyle": "1.0.0",
-    "@stackshift-ui/blog": "1.0.0",
-    "@stackshift-ui/button": "1.0.0",
-    "@stackshift-ui/call-to-action": "1.0.0",
-    "@stackshift-ui/contact": "1.0.0",
-    "@stackshift-ui/container": "1.0.0",
-    "@stackshift-ui/cookies": "1.0.0",
-    "@stackshift-ui/faqs": "1.0.0",
-    "@stackshift-ui/features": "1.0.0",
-    "@stackshift-ui/flex": "1.0.0",
-    "@stackshift-ui/footer": "1.0.0",
-    "@stackshift-ui/form-field": "1.0.0",
-    "@stackshift-ui/grid": "1.0.0",
-    "@stackshift-ui/header": "1.0.0",
-    "@stackshift-ui/heading": "1.0.0",
-    "@stackshift-ui/how-it-works": "1.0.0",
-    "@stackshift-ui/input": "1.0.0",
-    "@stackshift-ui/image": "1.0.0",
-    "@stackshift-ui/link": "1.0.0",
-    "@stackshift-ui/logo-cloud": "1.0.0",
-    "@stackshift-ui/newsletter": "1.0.0",
-    "@stackshift-ui/portfolio": "1.0.0",
-    "@stackshift-ui/section": "1.0.0",
-    "@stackshift-ui/signin-signup": "1.0.0",
-    "@stackshift-ui/statistics": "1.0.0",
-    "@stackshift-ui/swiper-pagination": "1.0.0",
-    "@stackshift-ui/team": "1.0.0",
-    "@stackshift-ui/testimonial": "1.0.0",
-    "@stackshift-ui/text": "1.0.0",
-    "@stackshift-ui/text-component": "1.0.0",
-    "@stackshift-ui/webriq-form": "1.0.0",
-    "@stackshift-ui/system": "1.0.0",
+    "@stackshift-ui/app-promo": "^1.0.0",
+    "@stackshift-ui/blockstyle": "^1.0.0",
+    "@stackshift-ui/blog": "^1.0.0",
+    "@stackshift-ui/button": "^1.0.0",
+    "@stackshift-ui/call-to-action": "^1.0.0",
+    "@stackshift-ui/contact": "^1.0.0",
+    "@stackshift-ui/container": "^1.0.0",
+    "@stackshift-ui/cookies": "^1.0.0",
+    "@stackshift-ui/faqs": "^1.0.0",
+    "@stackshift-ui/features": "^1.0.0",
+    "@stackshift-ui/flex": "^1.0.0",
+    "@stackshift-ui/footer": "^1.0.0",
+    "@stackshift-ui/form-field": "^1.0.0",
+    "@stackshift-ui/grid": "^1.0.0",
+    "@stackshift-ui/header": "^1.0.0",
+    "@stackshift-ui/heading": "^1.0.0",
+    "@stackshift-ui/how-it-works": "^1.0.0",
+    "@stackshift-ui/input": "^1.0.0",
+    "@stackshift-ui/image": "^1.0.0",
+    "@stackshift-ui/link": "^1.0.0",
+    "@stackshift-ui/logo-cloud": "^1.0.0",
+    "@stackshift-ui/newsletter": "^1.0.0",
+    "@stackshift-ui/portfolio": "^1.0.0",
+    "@stackshift-ui/section": "^1.0.0",
+    "@stackshift-ui/signin-signup": "^1.0.0",
+    "@stackshift-ui/statistics": "^1.0.0",
+    "@stackshift-ui/swiper-pagination": "^1.0.0",
+    "@stackshift-ui/team": "^1.0.0",
+    "@stackshift-ui/testimonial": "^1.0.0",
+    "@stackshift-ui/text": "^1.0.0",
+    "@stackshift-ui/text-component": "^1.0.0",
+    "@stackshift-ui/webriq-form": "^1.0.0",
+    "@stackshift-ui/system": "^2.0.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^4.8.0",
     "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^5.3.0",
