chore: add ErrorBoundary

--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "@stackshift-ui/header": "^1.0.0",
     "@stackshift-ui/heading": "^1.0.0",
     "@stackshift-ui/how-it-works": "^1.0.0",
-    "@stackshift-ui/input": "^1.0.0",
     "@stackshift-ui/image": "^1.0.0",
+    "@stackshift-ui/input": "^1.0.0",
     "@stackshift-ui/link": "^1.0.0",
     "@stackshift-ui/logo-cloud": "^1.0.0",
     "@stackshift-ui/newsletter": "^1.0.0",
@@ -56,12 +56,12 @@
     "@stackshift-ui/signin-signup": "^1.0.0",
     "@stackshift-ui/statistics": "^1.0.0",
     "@stackshift-ui/swiper-pagination": "^1.0.0",
+    "@stackshift-ui/system": "^2.0.0",
     "@stackshift-ui/team": "^1.0.0",
     "@stackshift-ui/testimonial": "^1.0.0",
     "@stackshift-ui/text": "^1.0.0",
     "@stackshift-ui/text-component": "^1.0.0",
     "@stackshift-ui/webriq-form": "^1.0.0",
-    "@stackshift-ui/system": "^2.0.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^4.8.0",
     "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^5.3.0",
@@ -96,6 +96,7 @@
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.1.1",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
     "sanity": "^3.17.0",
