--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@stackshift-ui/input": "^1.0.0",
     "@stackshift-ui/link": "^1.0.0",
     "@stackshift-ui/logo-cloud": "^1.0.0",
+    "@stackshift-ui/navigation": "^2.0.0",
     "@stackshift-ui/newsletter": "^1.0.0",
     "@stackshift-ui/portfolio": "^1.0.0",
     "@stackshift-ui/section": "^1.0.0",
@@ -63,18 +64,18 @@
     "@stackshift-ui/webriq-form": "^1.0.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^4.8.0",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^5.3.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^5.3.0",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^5.3.1-components.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^5.3.1-components.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "clsx": "^2.0.0",
