--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^6.0.4",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
-    "clsx": "^2.0.0",
+    "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^4.1.0",
@@ -110,7 +110,6 @@
     "stripe": "^17.2.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
-    "tailwind-merge": "^2.0.0",
     "ts-dedent": "^2.2.0",
     "vanilla-cookieconsent": "^3.0.1"
   },
