--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "magicast": "^0.3.3",
     "marked": "^14.1.2",
     "msw-storybook-addon": "2.0.3",
-    "nanoid": "^5.0.7",
+    "nanoid": "3.1.30",
     "next": "^14.1.3",
     "next-sanity": "4.3.3",
     "polished": "^4.2.2",
