--- a/package.json
+++ b/package.json
@@ -31,36 +31,36 @@
     "@sanity/types": "^3.17.0",
     "@sanity/ui": "^2.8.9",
     "@sanity/vision": "^3.17.0",
-    "@stackshift-ui/app-promo": "^6.0.3",
-    "@stackshift-ui/blog": "^6.0.6",
+    "@stackshift-ui/app-promo": "6.0.4-beta.0",
+    "@stackshift-ui/blog": "6.0.7-beta.0",
     "@stackshift-ui/button": "^6.0.3",
-    "@stackshift-ui/call-to-action": "^6.0.4",
-    "@stackshift-ui/contact": "^6.0.4",
+    "@stackshift-ui/call-to-action": "6.0.5-beta.0",
+    "@stackshift-ui/contact": "6.0.5-beta.0",
     "@stackshift-ui/container": "^6.0.3",
-    "@stackshift-ui/cookies": "^6.0.3",
+    "@stackshift-ui/cookies": "6.0.4-beta.0",
     "@stackshift-ui/faqs": "^6.0.5",
-    "@stackshift-ui/features": "^6.0.4",
+    "@stackshift-ui/features": "6.0.5-beta.0",
     "@stackshift-ui/flex": "^6.0.3",
-    "@stackshift-ui/footer": "^6.0.4",
+    "@stackshift-ui/footer": "6.0.5-beta.0",
     "@stackshift-ui/form-field": "^6.0.4",
     "@stackshift-ui/grid": "^6.0.3",
-    "@stackshift-ui/header": "^6.0.5",
+    "@stackshift-ui/header": "6.0.6-beta.0",
     "@stackshift-ui/heading": "^6.0.3",
-    "@stackshift-ui/how-it-works": "^6.0.3",
+    "@stackshift-ui/how-it-works": "6.0.4-beta.0",
     "@stackshift-ui/image": "^6.0.3",
     "@stackshift-ui/input": "^6.0.4",
     "@stackshift-ui/link": "^6.0.3",
-    "@stackshift-ui/logo-cloud": "^6.0.4",
-    "@stackshift-ui/navigation": "^6.0.4",
+    "@stackshift-ui/logo-cloud": "6.0.5-beta.0",
+    "@stackshift-ui/navigation": "6.0.5.beta.0",
     "@stackshift-ui/newsletter": "^6.0.4",
-    "@stackshift-ui/portfolio": "^6.0.4",
+    "@stackshift-ui/portfolio": "6.0.5-beta.0",
     "@stackshift-ui/section": "^6.0.3",
-    "@stackshift-ui/signin-signup": "^6.0.4",
-    "@stackshift-ui/statistics": "^6.0.4",
+    "@stackshift-ui/signin-signup": "6.0.5-beta.0",
+    "@stackshift-ui/statistics": "6.0.5-beta.0",
     "@stackshift-ui/swiper-pagination": "^6.0.3",
     "@stackshift-ui/system": "^6.0.3",
-    "@stackshift-ui/team": "^6.0.4",
-    "@stackshift-ui/testimonial": "^6.0.3",
+    "@stackshift-ui/team": "6.0.5-beta.0",
+    "@stackshift-ui/testimonial": "6.0.4-beta.0",
     "@stackshift-ui/text": "^6.0.3",
     "@stackshift-ui/text-component": "^6.0.3",
     "@stackshift-ui/webriq-form": "^6.0.3",
