fix build error

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@stackshift-ui/input": "^6.0.4",
     "@stackshift-ui/link": "^6.0.3",
     "@stackshift-ui/logo-cloud": "6.0.5-beta.0",
-    "@stackshift-ui/navigation": "6.0.5.beta.0",
+    "@stackshift-ui/navigation": "6.0.5-beta.0",
     "@stackshift-ui/newsletter": "^6.0.4",
     "@stackshift-ui/portfolio": "6.0.5-beta.0",
     "@stackshift-ui/section": "^6.0.3",
@@ -60,7 +60,7 @@
     "@stackshift-ui/swiper-pagination": "^6.0.3",
     "@stackshift-ui/system": "^6.0.3",
     "@stackshift-ui/team": "6.0.5-beta.0",
-    "@stackshift-ui/testimonial": "6.0.4-beta.0",
+    "@stackshift-ui/testimonial": "6.0.3",
     "@stackshift-ui/text": "^6.0.3",
     "@stackshift-ui/text-component": "^6.0.3",
     "@stackshift-ui/webriq-form": "^6.0.3",
