--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@stackshift-ui/swiper-pagination": "^6.0.3",
     "@stackshift-ui/system": "^6.0.3",
     "@stackshift-ui/team": "6.0.5-beta.0",
-    "@stackshift-ui/testimonial": "6.0.4-beta.0",
+    "@stackshift-ui/testimonial": "6.0.3",
     "@stackshift-ui/text": "^6.0.3",
     "@stackshift-ui/text-component": "^6.0.3",
     "@stackshift-ui/webriq-form": "^6.0.3",
