--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "nanoid": "3.1.30",
     "next": "^14.1.3",
     "next-sanity": "4.3.3",
+    "node-fetch": "^3.3.2",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
@@ -117,7 +118,6 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.5.0",
     "@playwright/test": "1.48.0",
-    "plop": "^3.0.5",
     "@storybook/addon-designs": "^8.0.0",
     "@storybook/addon-docs": "^8.0.0",
     "@storybook/addon-essentials": "^8.0.0",
