--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webriq-pagebuilder/site-template-default",
-  "version": "6.0.6",
+  "version": "6.0.7",
   "private": true,
   "license": "MIT",
   "author": {
@@ -66,18 +66,18 @@
     "@stackshift-ui/webriq-form": "^6.0.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^4.8.0",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^6.0.7-ig-fixes.2",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^6.0.7-ig-fixes.2",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^6.0.7",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "classnames": "^2.5.1",
