--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag @webriq-pagebuilder/sanity-plugin-input-component-social-accounts@$ctag",
+    "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag @webriq-pagebuilder/sanity-plugin-input-component-social-accounts@$ctag @webriq-pagebuilder/sanity-plugin-get-sanity-schema@$ctag",
     "update-stackshift": "yarn add @stackshift-ui/app-promo@latest @stackshift-ui/blog@latest @stackshift-ui/button@latest @stackshift-ui/call-to-action@latest @stackshift-ui/contact@latest @stackshift-ui/container@latest @stackshift-ui/cookies@latest @stackshift-ui/faqs@latest @stackshift-ui/features@latest @stackshift-ui/flex@latest @stackshift-ui/footer@latest @stackshift-ui/form-field@latest @stackshift-ui/grid@latest @stackshift-ui/header@latest @stackshift-ui/heading@latest @stackshift-ui/how-it-works@latest @stackshift-ui/image@latest @stackshift-ui/input@latest @stackshift-ui/link@latest @stackshift-ui/logo-cloud@latest @stackshift-ui/navigation@latest @stackshift-ui/newsletter@latest @stackshift-ui/portfolio@latest @stackshift-ui/section@latest @stackshift-ui/signin-signup@latest @stackshift-ui/statistics@latest @stackshift-ui/swiper-pagination@latest @stackshift-ui/system@latest @stackshift-ui/team@latest @stackshift-ui/testimonial@latest @stackshift-ui/text@latest @stackshift-ui/text-component@latest @stackshift-ui/webriq-form@latest",
     "stackshift:custom": "plop",
     "storybook": "storybook dev -p 6006",
@@ -66,18 +66,19 @@
     "@stackshift-ui/webriq-form": "^6.0.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^4.8.0",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^6.0.7",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^6.0.7",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-get-sanity-schema": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^6.0.8-ai-scraper.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^6.0.8-ai-scraper.1",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "classnames": "^2.5.1",
