--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,10 +1,10 @@
 name: "Chromatic"
 
 on:
-  pull_request:
+  push:
     branches:
       - master
-      - main
+      - develop
 
 jobs:
   test:
