--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
     "@netlify/plugin-nextjs": "^5.5.0",
-    "@playwright/test": "1.44.1",
+    "@playwright/test": "^1.51.1",
     "@storybook/addon-designs": "^8.0.4",
     "@storybook/addon-docs": "^8.4.7",
     "@storybook/addon-essentials": "^8.4.7",
@@ -142,6 +142,7 @@
     "@types/vhtml": "^2.2.4",
     "autoprefixer": "^10.4.20",
     "chromatic": "^11.0.8",
+    "dotenv": "^16.4.7",
     "eslint": "^9.12.0",
     "eslint-config-next": "14.1.3",
     "eslint-plugin-storybook": "^0.11.2",
