--- a/package.json
+++ b/package.json
@@ -38,23 +38,23 @@
     "@stackshift-ui/blog": "^6.0.15",
     "@stackshift-ui/button": "^6.0.11",
     "@stackshift-ui/call-to-action": "^6.0.14",
-    "@stackshift-ui/contact": "^6.0.13",
+    "@stackshift-ui/contact": "^6.0.14",
     "@stackshift-ui/container": "^6.0.11",
     "@stackshift-ui/cookies": "^6.0.12",
     "@stackshift-ui/faqs": "^6.0.14",
     "@stackshift-ui/features": "^6.0.13",
     "@stackshift-ui/flex": "^6.0.11",
-    "@stackshift-ui/footer": "^6.0.13",
+    "@stackshift-ui/footer": "^6.0.14",
     "@stackshift-ui/form-field": "^6.0.13",
     "@stackshift-ui/grid": "^6.0.11",
-    "@stackshift-ui/header": "^6.1.0-alpha.6",
+    "@stackshift-ui/header": "^6.1.0",
     "@stackshift-ui/heading": "^6.0.11",
     "@stackshift-ui/how-it-works": "^6.0.12",
     "@stackshift-ui/image": "^6.0.11",
     "@stackshift-ui/input": "^6.0.12",
     "@stackshift-ui/link": "^6.0.11",
     "@stackshift-ui/logo-cloud": "^6.0.14",
-    "@stackshift-ui/navigation": "^6.1.0-alpha.4",
+    "@stackshift-ui/navigation": "^6.1.0",
     "@stackshift-ui/newsletter": "^6.0.12",
     "@stackshift-ui/portfolio": "^6.0.13",
     "@stackshift-ui/section": "^6.0.11",
@@ -70,18 +70,18 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^4.8.0",
     "@uidotdev/usehooks": "^2.4.1",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^6.0.10-alpha.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^6.0.10-alpha.3",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^6.0.10",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^6.0.10",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "classnames": "^2.5.1",
