chore: footer, contact pkg version, yarn lock

--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "@stackshift-ui/blog": "^6.0.15",
     "@stackshift-ui/button": "^6.0.11",
     "@stackshift-ui/call-to-action": "^6.0.14",
-    "@stackshift-ui/contact": "^6.0.13",
+    "@stackshift-ui/contact": "^6.0.14",
     "@stackshift-ui/container": "^6.0.11",
     "@stackshift-ui/cookies": "^6.0.12",
     "@stackshift-ui/faqs": "^6.0.14",
     "@stackshift-ui/features": "^6.0.13",
     "@stackshift-ui/flex": "^6.0.11",
-    "@stackshift-ui/footer": "^6.0.13",
+    "@stackshift-ui/footer": "^6.0.14",
     "@stackshift-ui/form-field": "^6.0.13",
     "@stackshift-ui/grid": "^6.0.11",
     "@stackshift-ui/header": "^6.1.0",
@@ -54,7 +54,7 @@
     "@stackshift-ui/input": "^6.0.12",
     "@stackshift-ui/link": "^6.0.11",
     "@stackshift-ui/logo-cloud": "^6.0.14",
-    "@stackshift-ui/navigation": "6.1.0",
+    "@stackshift-ui/navigation": "^6.1.0",
     "@stackshift-ui/newsletter": "^6.0.12",
     "@stackshift-ui/portfolio": "^6.0.13",
     "@stackshift-ui/section": "^6.0.11",
