--- a/package.json
+++ b/package.json
@@ -113,11 +113,14 @@
     "sass": "^1.62.1",
     "sharp": "^0.33.5",
     "split-pane-react": "^0.1.3",
+    "string-width": "4.2.3",
+    "strip-ansi": "6.0.1",
     "stripe": "^17.2.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
     "ts-dedent": "^2.2.0",
-    "vanilla-cookieconsent": "^3.0.1"
+    "vanilla-cookieconsent": "^3.0.1",
+    "wrap-ansi": "7.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
