remove storybook and chromatic

--- a/.gitignore
+++ b/.gitignore
@@ -43,10 +43,7 @@ yarn-error.log*
 # sitemap
 public/sitemap.xml
 
-# chromatic
-chromatic.log
-build-storybook.log
-storybook-static/
+# playwright
 /test-results/
 /playwright-report/
 /blob-report/
